[project]
name = "linksurf"
version = "0.0.0"
description = "Experimental web crawler"
authors = [
    { name = "Victor Guedes", email = "victorfelipe.guedes@hotmail.com" }
]
readme = "README.md"
requires-python = ">=3.10,<3.14"
dependencies = [
    "requests (>=2.32.5,<3.0.0)",
    "python-dotenv (>=1.2.1,<2.0.0)",
    "beautifulsoup4 (>=4.14.3,<5.0.0)",
    "beanie (>=2.1.0,<3.0.0)",
    "redis (>=5.0.0,<6.0.0)",
    "celery (>=5.0.0,<6.0.0)",
    "aiobotocore (>=2.0.0,<3.0.0)",
    "celery-types (>=0.26.0,<0.27.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
