[project]
name = "linksurf"
version = "0.0.0"
description = "Experimental web crawler"
authors = [
    { name = "Victor Guedes", email = "victorfelipe.guedes@hotmail.com" }
]
readme = "README.md"
requires-python = ">=3.10,<3.14"
dependencies = [
    "requests (>=2.32.5,<3.0.0)",
    "python-dotenv (>=1.2.1,<2.0.0)",
    "beautifulsoup4 (>=4.14.3,<5.0.0)",
    "beanie (>=2.1.0,<3.0.0)",
    "redis (>=5.0.0,<6.0.0)",
    "aio-pika (>=9.0.0,<10.0.0)",
    "pika (>=1.3.0,<2.0.0)",
    "fastapi (>=0.136.1,<0.137.0)",
    "uvicorn (>=0.46.0,<0.47.0)",
    "tldextract (>=5.3.1,<6.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "boto3 (>=1.43.15,<2.0.0)",
    "boto3-stubs (>=1.43.15,<1.44.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
