[project]
name = "linksurf"
version = "0.0.0"
description = "Experimental web crawler"
authors = [
    { name = "Victor Guedes", email = "victorfelipe.guedes@hotmail.com" }
]
readme = "README.md"
requires-python = ">=3.10,<3.14"
dependencies = [
    "httpx (>=0.28.1,<0.29.0)",
    "python-dotenv (>=1.2.1,<2.0.0)",
    "beautifulsoup4 (>=4.14.3,<5.0.0)",
    "redis (>=8.0.1,<9.0.0)",
    "pika (>=1.3.0,<2.0.0)",
    "aiobotocore (>=3.7.0,<4.0.0)",
    "structlog (>=26.1.0,<27.0.0)",
    "rich (>=15.0.0,<16.0.0)",
    "logtail-python (>=0.4.0,<0.5.0)",
    "aio-pika (>=9.6.2,<10.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
